separate integration tests